refactor: corrigi chamada ao DTO e Repository